--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -102,6 +102,8 @@ h2.subt{
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
     padding: 9px;
     border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
     display: inline-block;
     top: 12px;
     position: relative;
@@ -690,6 +692,8 @@ ul.list-group{
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
     padding: 9px;
     border-radius: 50px;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
     display: inline-block;
     position: relative;
 }
@@ -699,6 +703,8 @@ ul.list-group{
     width: 12px;
     height: 12px;
     border-radius: 50px;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
     position: absolute;
     top: 3px;
     background: $azul1;
