--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -58,7 +58,7 @@ html(lang="en")
 							a#AvPriv(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalAvPriv', data-trigger='hover') Aviso de Privacidad
 						.col-md-12
 							.col-md-11.text-left
-								p.label He leído y conozco el alcance del tratamiento de mis datos personales.
+								p.labelgral He leído y conozco el alcance del tratamiento de mis datos personales.
 									br
 								br
 						.col-md-12
@@ -78,7 +78,7 @@ html(lang="en")
 						.col-md-4
 							input.registro.form-control(type='text', placeholder='Correo electrónico *')
 						.col-md-4
-							//- p.label Fecha de nacimiento*
+							//- p.labelgral Fecha de nacimiento*
 							input.registro.selector.form-control(type='text', placeholder='Fecha de nacimiento*')
 						.col-md-4
 							.col-xs-4
@@ -94,7 +94,7 @@ html(lang="en")
 				.row
 					.col-md-offset-1.col-md-10
 						.col-md-12
-							p.label Ingresa la cantidad por la cual te gustaría asegurarte *
+							p.labelgral Ingresa la cantidad por la cual te gustaría asegurarte *
 								span.ayuda.azul(data-toggle='tooltip', data-html="true", title="", data-placement='right', data-content="jgjg",data-title='Monto mímino $ 50,000.00 <br> Monto máximo $ 500,000.00',class='naranja-tooltip')
 						.col-md-4
 							input.registro.form-control(type='text', placeholder='$100,000,000.°°')
@@ -133,31 +133,33 @@ html(lang="en")
 							strong Hola XXXXXX
 							, ésta es la mejor opción que encontramos para tí:
 				.space
-				.bgazul1.r-row
-					.row
-						.col-md-offset-1.col-md-10
-							h1 Protege a tus seres queridos en caso de que llegues a faltar con:
-					br
-					.row
-						.col-md-offset-1.col-md-7
-							h6 - Por fallecimiento:
-						.col-md-4
-							h5 $250,000.°°
-					.row
-						.col-md-offset-1.col-md-7
-							h6 - Adicionales por muerte accidental
-						.col-md-4
-							h5 $250,000.°°
-					.row
-						.col-md-offset-1.col-md-7
-							h6 - Por gastos funerarios
-						.col-md-4
-							h5 $250,000.°°
-					.space
-					.row
-						.col-md-12.text-center
-							h4.text-center Ver detalle del producto
-					.space
+				.row
+					.col-md-offset-1.col-md-10
+						.bgazul1.r-row
+							.row
+								.col-md-offset-1.col-md-10
+									h1 Protege a tus seres queridos en caso de que llegues a faltar con:
+							br
+							.row
+								.col-md-offset-1.col-md-7
+									h6 - Por fallecimiento:
+								.col-md-4
+									h5 $250,000.°°
+							.row
+								.col-md-offset-1.col-md-7
+									h6 - Adicionales por muerte accidental
+								.col-md-4
+									h5 $250,000.°°
+							.row
+								.col-md-offset-1.col-md-7
+									h6 - Por gastos funerarios
+								.col-md-4
+									h5 $250,000.°°
+							.space
+							.row
+								.col-md-12.text-center
+									h4.text-center Ver detalle del producto
+							.space
 				.row
 					.col-md-offset-1.col-md-11
 						h2 Tipo de plan:
@@ -172,26 +174,103 @@ html(lang="en")
 							label(for='radio-1')
 							label Fijo
 				.row
-					br
-					.col-md-12
-						.col-md-3.text-right
-							h4 Pagos por prima:
-							h6 Elige el plan que más te 
-								br 
-								h6 interesa
-						.col-md-9
-							.col-md-3
-								br
-								button.btn.btn-info(type='button') $ 0.00 Mensual
-							.col-md-3
-								br
-								button.btn.btn-info(type='button') $ 0.00 quincenal
-							.col-md-3
-								br
-								button.btn.btn-info(type='button') $ 0.00 Semestral
-							.col-md-3
-								br
-								button.btn.btn-info(type='button') $ 0.00 Anual		
+					.col-md-offset-1.col-md-10
+						.bggris.planes
+							.a
+								.triangulo
+							.row
+								.col-md-12
+									h4 Elige el plan que más te convenga:
+							.row
+								.col-md-12
+									h2.subt Pagos por prima
+									.col-md-3.plan.active
+										button.btn.btn-info.bigbutton(type='button')
+											.triangulo
+											h4  $ 250.00
+											p.labelgral Mensual
+										br
+										br
+										br
+										ul.list-group
+											.triangulo
+												.triangulo2
+											li.list-group-item
+												span.badge 
+													strong $250.00
+												p.labelgral + 
+													strong 11
+													span  pago subsecuente de:
+											li.list-group-item.tp
+												span.badge 
+													strong $3,000.00
+												p.labelgral Total a pagar:
+									.col-md-3.plan
+										button.btn.btn-info.bigbutton(type='button')
+											.triangulo
+											h4 $ 750.00
+											p.labelgral Trimestral
+										br
+										br
+										br
+										ul.list-group
+											.triangulo
+												.triangulo2
+											li.list-group-item
+												span.badge 
+													strong $750.00
+												p.labelgral + 
+													strong 3
+													span  pago subsecuente de:
+											li.list-group-item.tp
+												span.badge 
+													strong $3,000.00
+												p.labelgral Total a pagar:
+									.col-md-3.plan
+										button.btn.btn-info.bigbutton(type='button')
+											.triangulo
+											h4 $ 1,500.00 
+											p.labelgral Semestral
+										br
+										br
+										br
+										ul.list-group
+											.triangulo
+												.triangulo2
+											li.list-group-item
+												span.badge 
+													strong $1,500.00
+												p.labelgral + 
+													strong 1
+													span  pago subsecuente de:
+											li.list-group-item.tp
+												span.badge 
+													strong $3,000.00
+												p.labelgral Total a pagar:
+									.col-md-3.plan
+										button.btn.btn-info.bigbutton(type='button')
+											.triangulo
+											h4 $ 3,000.00 
+											p.labelgral Anual		
+										br
+										br
+										br
+										ul.list-group
+											.triangulo
+												.triangulo2
+											li.list-group-item
+												span.badge 
+													strong $3,000.00
+												p.labelgral Como 
+													strong pago único 
+													span de:
+													br
+											li.list-group-item.tp
+												span.badge 
+													strong $3,000.00
+												p.labelgral Total a pagar:
+							.space
+					
 				.space
 				.row
 					br
@@ -295,9 +374,9 @@ html(lang="en")
 				.col-md-9
 					P Para contratar tu póliza es necesario completar la información que se solicita a continuación:
 				.col-md-3.text-right
-					p.label No. de cotización
+					p.labelgral No. de cotización
 					br
-					p.label 123456789A
+					p.labelgral 123456789A
 						.space
 					hr
 				.col-md-8
@@ -307,28 +386,28 @@ html(lang="en")
 					.col-md-8
 						.col-md-6
 							.form-group
-								p.label Nombre(s)*
+								p.labelgral Nombre(s)*
 								input.form-control(type="text",placeholder="Nombre(s)")
 							.form-group
-								p.label Segundo apellido*
+								p.labelgral Segundo apellido*
 								input.form-control(type="text",placeholder="Nombre(s)")
 						.col-md-6
 							.form-group
-								p.label Primer apellido*
+								p.labelgral Primer apellido*
 								input.form-control(type="text",placeholder="Apellido Materno")
 						.col-md-6
 							.col-md-4
 								.form-group
-									p.label Genero*
+									p.labelgral Genero*
 									br
 							.col-md-7
 								.radio
-									p.label
+									p.labelgral
 										input(type='radio',id="radio-cs",name='optionsRadios', value='femenino', checked='' class="regular-radio")
 										label(for='radio-cs')
 										| Femenino
 								.radio
-									p.label
+									p.labelgral
 										input(type='radio',id="radio-cs2",name='optionsRadios', value='masculino',class="regular-radio")		
 										label(for='radio-cs2')
 										| Masculino
@@ -346,7 +425,7 @@ html(lang="en")
 									input#year2.form-control(type='text', disabled='')
 						.col-md-6
 							.form-group
-								p.label Pais de nacimiento*
+								p.labelgral Pais de nacimiento*
 								select.form-control
 									option(value="opcion-1") Seleccionar
 									option(value="opcion-2") b
@@ -354,11 +433,11 @@ html(lang="en")
 									option(value="opcion-4") d
 									option(value="opcion-5") e
 							.form-group
-								p.label CURP*
+								p.labelgral CURP*
 								input.form-control(type="text",placeholder="Nombre(s)")
 						.col-md-6
 							.form-group
-								p.label Entidad de nacimiento*
+								p.labelgral Entidad de nacimiento*
 								select.form-control
 									option(value="opcion-1") Seleccionar
 									option(value="opcion-2") b
@@ -382,10 +461,10 @@ html(lang="en")
 									label No
 						.col-md-6
 							.form-group
-								p.label C.P.
+								p.labelgral C.P.
 								input.form-control(type="text",placeholder="Calle")
 							.form-group
-								p.label Entidad federativa*
+								p.labelgral Entidad federativa*
 								select.form-control
 									option(value="opcion-1") Seleccionar
 									option(value="opcion-2") b
@@ -393,7 +472,7 @@ html(lang="en")
 									option(value="opcion-4") d
 									option(value="opcion-5") e
 							.form-group
-								p.label Delegación o municipio*
+								p.labelgral Delegación o municipio*
 								select.form-control
 									option(value="opcion-1") Seleccionar
 									option(value="opcion-2") b
@@ -401,7 +480,7 @@ html(lang="en")
 									option(value="opcion-4") d
 									option(value="opcion-5") e
 							.form-group
-								p.label Calle*
+								p.labelgral Calle*
 								select.form-control
 									option(value="opcion-1") Seleccionar
 									option(value="opcion-2") b
@@ -409,11 +488,11 @@ html(lang="en")
 									option(value="opcion-4") d
 									option(value="opcion-5") e
 							.form-group
-								p.label No. Interior*
+								p.labelgral No. Interior*
 								input.form-control(type="text",placeholder="No. Interior")
 						.col-md-6
 							.form-group
-								p.label Entidad federativa
+								p.labelgral Entidad federativa
 								select.form-control
 									option(value="opcion-1") Colonia
 									option(value="opcion-2") b
@@ -421,7 +500,7 @@ html(lang="en")
 									option(value="opcion-4") d
 									option(value="opcion-5") e
 							.form-group
-								p.label Ciudad*
+								p.labelgral Ciudad*
 								select.form-control
 									option(value="opcion-1") Seleccionar
 									option(value="opcion-2") b
@@ -429,7 +508,7 @@ html(lang="en")
 									option(value="opcion-4") d
 									option(value="opcion-5") e
 							.form-group
-								p.label Colonia*
+								p.labelgral Colonia*
 								select.form-control
 									option(value="opcion-1") Seleccionar
 									option(value="opcion-2") b
@@ -437,10 +516,10 @@ html(lang="en")
 									option(value="opcion-4") d
 									option(value="opcion-5") e
 							.form-group
-								p.label No. Exterior*
+								p.labelgral No. Exterior*
 								input.form-control(type="text",placeholder="No. Exterior")
 							.form-group
-								p.label No. teléfonico*
+								p.labelgral No. teléfonico*
 								input.form-control(type="text",placeholder="Telefono")
 						.col-md-8
 							h4 BENEFICIARIOS
@@ -454,13 +533,13 @@ html(lang="en")
 							h4 DATOS BENEFICIARIO 1
 						.col-md-6
 							.form-group
-								p.label Nombre(s)*
+								p.labelgral Nombre(s)*
 								input.form-control(type="text",placeholder="Nombre(s)")
 							.form-group
-								p.label Segundo apellido*
+								p.labelgral Segundo apellido*
 								input.form-control(type="text",placeholder="Nombre(s)")
 							.form-group
-								p.label Parentesco*
+								p.labelgral Parentesco*
 								select.form-control
 									option(value="opcion-1") Selecciona
 									option(value="opcion-2") b
@@ -469,10 +548,10 @@ html(lang="en")
 									option(value="opcion-5") e
 						.col-md-6
 							.form-group
-								p.label Primer apellido*
+								p.labelgral Primer apellido*
 								input.form-control(type="text",placeholder="Apellido Materno")
 							.form-group
-								p.label Porcentaje que le corresponde*
+								p.labelgral Porcentaje que le corresponde*
 								select.form-control
 									option(value="opcion-1") Selecciona
 									option(value="opcion-2") b
@@ -512,7 +591,7 @@ html(lang="en")
 									.space
 								.col-md-12.text-right
 									.radio
-										p.label
+										p.labelgral
 											input(type='radio',id="radioctrt",name='PlanOf', value='Plan', class="regular-radio", checked="")
 											label(for='radioctrt')
 											label Plan reciente
@@ -545,12 +624,12 @@ html(lang="en")
 						.col-md-12.text-center
 							.col-md-3
 							.col-md-5
-								p.label Número telefonico
+								p.labelgral Número telefonico
 								input#contrata.form-control(type='text' placeholder='55-98-98-98')
 						.col-md-12.text-center
 							.col-md-3
 							.col-md-5
-								p.label Horario a contactar
+								p.labelgral Horario a contactar
 								input#contrata.form-control(type='text' placeholder='12:00-16:00')						
 						button.btn-lg CONTACTARME
 					//.modal-footer
@@ -568,9 +647,9 @@ html(lang="en")
 						strong XXXXXX
 						, éstos son los datos que vas a registrar para contratar tu seguro y emitir tu Póliza, por favor revisa la información.
 				.col-md-3.text-right
-					p.label No. de cotización
+					p.labelgral No. de cotización
 					br
-					p.label 123456789A
+					p.labelgral 123456789A
 			.row
 				.col-md-4
 					h4 SUMA ASEGURADA:
@@ -687,7 +766,7 @@ html(lang="en")
 					h4 Beneficiarios
 				.col-md-4
 					.col-md-12
-						p.label Beneficiario 1
+						p.labelgral Beneficiario 1
 					.col-md-6
 						p Nombre(s):
 						p Primer apellido:
@@ -702,7 +781,7 @@ html(lang="en")
 						p 70%
 				.col-md-4
 					.col-md-12
-						p.label Beneficiario 2
+						p.labelgral Beneficiario 2
 					.col-md-6
 						p Nombre(s):
 						p Primer apellido:
@@ -728,15 +807,15 @@ html(lang="en")
 				.row
 					.col-md-4
 						.col-md-10
-							p.label No. de tarjeta*
+							p.labelgral No. de tarjeta*
 							input#contrata.form-control(type='text' placeholder='12312341234234123')
 					.col-md-4
 						.col-md-10
-							p.label CVV*
+							p.labelgral CVV*
 							input#contrata.form-control(type='text' placeholder='000')
 					.col-md-4
 						.col-md-10
-							p.label Tipo de tarjeta*
+							p.labelgral Tipo de tarjeta*
 							select.form-control
 								option(value="opcion-1") VISA
 								option(value="opcion-2") b
@@ -746,7 +825,7 @@ html(lang="en")
 					.col-md-4
 						.space
 						.col-md-12
-							p.label Fecha de vencimiento*
+							p.labelgral Fecha de vencimiento*
 						.col-md-4
 							select.form-control
 								option(value="opcion-1") 06
