--- a/vida/sass/style.scss
+++ b/vida/sass/style.scss
@@ -236,7 +236,7 @@ h2.subt{
 	h4{
 		color:$azul6;
 	}
-	p.label{
+	p.labelgral{
 		color:$azul6;
 	}	
 	p.dato{
@@ -255,7 +255,7 @@ h2.subt{
 	h4{
 		color:$azul6;
 	}
-	p.label{
+	p.labelgral{
 		color:$azul6;
 	}	
 	p.dato{
@@ -338,19 +338,40 @@ h2.subt{
 	color:$h2SubColor ;
 
 }
-.label{
+.labelgral{
 	color: #000;
 }
 .bggris{
-	background: #eee;
-	border:solid 1px #ddd;
-	padding-bottom: 20px;
-	padding-top: 20px;
-	hr{
-		border-top: 1px solid #000;
+	padding: 20px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	background: $gris6;
+	& .a.active{
+		.triangulo{
+		width: 0; 
+     	height: 0; 
+	    border-left: 48px solid #fff;
+	    border-top: 39px solid transparent;
+	    border-bottom: 40px solid transparent;
+	    position: relative;
+	    transform: rotate(90deg);
+	    left: -320px;
+		}
 	}
-
+	& .b.active{
+		.triangulo{
+		width: 0; 
+     	height: 0; 
+	    border-left: 48px solid #fff;
+	    border-top: 39px solid transparent;
+	    border-bottom: 40px solid transparent;
+	    position: relative;
+	    transform: rotate(90deg);
+	    right: -330px;
+		}
+	}
 }
+
 .form-control{
 	margin-bottom: 21px;
 }
@@ -426,7 +447,7 @@ h2.subt{
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
 	border: 2px solid #009ee5;
 }
-.label{
+.labelgral{
 	font-family: $pLabelFamily;
 	font-size:$pLabelSize;
 	color: $pLabelColor;
@@ -490,7 +511,6 @@ h2.subt{
 	ul.list-group{
 		border: 1px solid transparent;
 	}
-	    
 	.list-group-item {
 	    position: relative;
 	    display: block;
@@ -498,8 +518,109 @@ h2.subt{
 	    margin-bottom: -1px;
 	    background-color: transparent;
 	    border: 1px solid transparent;
-	    	.badge,.label{
+	    	.badge,.labelgral{
 				color:#fff;
 			}
 	}	
+}
+ul.list-group{
+	    border: 1px solid $azul4;
+	    -webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+		border-radius: 5px;
+		p.label{
+    	font-size: 13px;
+		}
+		& li.list-group-item{
+			padding: 7px 5px 7px 10px;
+		}
+		& .badge{
+			color: $gris3;
+			background-color:transparent;
+			font-weight:400;
+	    	font-size: 15px;
+		}
+		& .tp{
+			 p.label{
+				color: $azul3;
+			}
+			.badge strong{
+				color: $azul3;
+			}
+		} 
+}
+.bigbutton{
+	// padding: 20px;
+	width: 100%;
+	height: 100%;
+	& h4 {
+		color: #fff;
+		font-size: 24px;
+	}
+	& p.labelgral{
+		color: #fff;
+		font-weight: 100;
+		font-size: 20px;
+	}
+}
+.planes .plan.active {
+	& .btn-info,.planes .plan.active .btn-info.active:hover {
+	    color: #fff;
+	    background-color: $azul2;
+	    border-color: $azul2;
+	    & h4{
+
+	    }
+	}
+	& .btn-info .triangulo{
+		top: 90px;
+	    margin: 0 auto;
+	    width: 0;
+	    height: 0;
+	    border-right: 14px solid transparent;
+	    border-left: 30px solid #006ec1;
+	    border-top: 19px solid transparent;
+	    border-bottom: 20px solid transparent;
+	    position: absolute;
+	    left: 88px;
+	}
+
+	& ul.list-group{
+	    border: 3px solid $azul2;
+		& .triangulo{
+			top: 144px;
+		    margin: 0 auto;
+		    width: 0;
+		    height: 0;
+		    border-left: 14px solid #006ec1;
+		    border-top: 14px solid transparent;
+		    border-bottom: 14px solid transparent;
+		    position: absolute;
+		    left: 90px;
+		    z-index: 10;
+		}
+		& .triangulo2{
+			top: -11px;
+		    margin: 0 auto;
+		    width: 0;
+		    height: 0;
+		    border-top: 11px solid transparent;
+		    border-bottom: 12px solid transparent;
+		    border-left: 14px solid #f2f2f2;
+		    position: absolute;
+		    left: -20px;
+		    z-index: 29;
+		}
+	}
+}
+.planes .triangulo{
+		top: -20px;
+		margin: 0 auto;
+		width: 0;
+		height: 0;
+		border-right: 20px solid transparent;
+		border-left: 20px solid transparent;
+		border-bottom: 20px solid transparent;
+		position: absolute;
+		right: 170px;
 }
